[gd_scene format=3 uid="uid://cqqfiaudklw6k"]

[ext_resource type="Script" uid="uid://cl6vytc21kfjo" path="res://Scripts/Player/player_momentum.gd" id="1_vgqql"]
[ext_resource type="PackedScene" uid="uid://bpxws01g1myf6" path="res://Systems/components/health_component.tscn" id="2_6t5aa"]
[ext_resource type="PackedScene" uid="uid://b12fqgptd5y3d" path="res://Systems/components/hitbox_component.tscn" id="3_6t5aa"]
[ext_resource type="Script" uid="uid://cqufbqehm15a" path="res://Scripts/Player/player_death_handler.gd" id="4_vgqql"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_f60y1"]
radius = 0.375
height = 1.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v0iea"]
radius = 0.375
height = 1.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x3wgy"]
radius = 0.375
height = 1.1796631

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vgqql"]

[node name="Player" type="CharacterBody3D" unique_id=99981486 groups=["Player"]]
collision_mask = 2
script = ExtResource("1_vgqql")

[node name="Mesh" type="MeshInstance3D" parent="." unique_id=667297727]
visible = false
mesh = SubResource("CapsuleMesh_f60y1")

[node name="NormalHitBox" type="CollisionShape3D" parent="." unique_id=1644640873]
shape = SubResource("CapsuleShape3D_v0iea")

[node name="CrouchHitBox" type="CollisionShape3D" parent="." unique_id=930497082]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2601685, 0)
shape = SubResource("CapsuleShape3D_x3wgy")

[node name="SpaceCheck" type="RayCast3D" parent="." unique_id=1683962218]
target_position = Vector3(0, 0.85, 0)
collision_mask = 2

[node name="WallRayLeft" type="RayCast3D" parent="." unique_id=56403755]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.48622924, 0)
target_position = Vector3(-1, 0, 0)
collision_mask = 2

[node name="WallRayRight" type="RayCast3D" parent="." unique_id=819014503]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.48622924, 0)
target_position = Vector3(1, 0, 0)
collision_mask = 2

[node name="Head" type="Node3D" parent="." unique_id=248747626]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.505445, 0)

[node name="PlayerCamera" type="Camera3D" parent="Head" unique_id=1709351100]

[node name="Health Component" parent="." unique_id=1334057615 instance=ExtResource("2_6t5aa")]

[node name="Player Death Handler" type="Node" parent="." unique_id=928962245]
script = ExtResource("4_vgqql")

[node name="Hitbox Component" parent="." unique_id=973421447 instance=ExtResource("3_6t5aa")]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox Component" unique_id=574987428]
shape = SubResource("CapsuleShape3D_vgqql")

[node name="Speed Change Cooldown" type="Timer" parent="." unique_id=1907676990]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="." unique_id=963707597]
wait_time = 2.0
one_shot = true

[node name="DashDurationTimer" type="Timer" parent="." unique_id=247132147]
wait_time = 0.5
one_shot = true

[node name="SlidingBoostCooldown" type="Timer" parent="." unique_id=2128327456]
wait_time = 1.2
one_shot = true

[node name="WallJumpPushDuration" type="Timer" parent="." unique_id=1703677272]

[node name="SpeedTest" type="Label" parent="." unique_id=404264627]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="entity_died" from="Health Component" to="Player Death Handler" method="_on_entity_died"]
[connection signal="area_entered" from="Hitbox Component" to="Hitbox Component" method="_on_area_entered"]
[connection signal="body_entered" from="Hitbox Component" to="Hitbox Component" method="_on_body_entered"]
[connection signal="change_speed" from="Hitbox Component" to="." method="_on_alter_speed"]
[connection signal="damage" from="Hitbox Component" to="Health Component" method="_on_damage"]
[connection signal="timeout" from="DashDurationTimer" to="." method="_on_dash_duration_timer_timeout"]
[connection signal="timeout" from="SlidingBoostCooldown" to="." method="_on_sliding_boost_cooldown_timeout"]
[connection signal="timeout" from="WallJumpPushDuration" to="." method="_on_wall_jump_push_duration_timeout"]
[connection signal="pressed" from="Pause Menu/Container/Button Container/ResumeButton" to="Pause Menu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="Pause Menu/Container/Button Container/SettingsButton" to="Pause Menu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="Pause Menu/Container/Button Container/MainMenuButton" to="Pause Menu" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Pause Menu/Container/Button Container/QuitButton" to="Pause Menu" method="_on_quit_button_pressed"]
[connection signal="close_settings" from="Pause Menu/Container/Settings Menu" to="Pause Menu" method="_on_settings_menu_close_settings"]
